--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,14 @@ yarn-error.log
 /.idea
 /.vscode
 # Ignore image files
-
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.tiff
+*.ico
+*.svg
+*.webp
 /image/
 /folder2/
